Name changed. `salient` was taken on crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "salient"
+name = "http-salient"
 description = "Simple http webserver"
 version = "0.1.0"
 authors = ["GreatC0der"]
